# swida

./: README.md  initial_db_data.json  manage.py  pyproject.toml
testing/: factoryboy.py  pytest.ini  test-results.xml  test_driver.py  test_order.py  test_settings.py  test_vehicle.py
testing/tests/: test_order.py  test_position.py  test_vehicle.py
testing/tests/handlers/: test_handlers.py
testing/tests/views/: test_driver.py  test_order.py  test_position.py  test_vehicle.py
transport_management/: asgi.py  settings.py  urls.py  wsgi.py
transport_management_core/: apps.py  handlers.py  urls.py
transport_management_core/migrations/: 0001_initial.py  0002_address_alter_order_delivery_address_and_more.py  0003_alter_address_unique_together.py
transport_management_core/models/: __init__.py  address.py  driver.py  order.py  position.py  vehicle.py
transport_management_core/serializers/: serializers_address.py  serializers_driver.py  serializers_order.py  serializers_position.py  serializers_vehicle.py
transport_management_core/views/: views_driver.py  views_order.py  views_position.py  views_vehicle.py
