[project]
name = "transport_management"
version = "0.1.0"
description = "swida assignment app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.8",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]